tiny.output
Terminals which are not used

   T_NONE
   T_LATTER
   T_NEWLINE
   T_QUIT
   T_THEN
   T_OPERATOR
   T_PERIOD
   T_COMMENT


State 113 conflicts: 2 shift/reduce
State 124 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 144 conflicts: 2 shift/reduce


Grammar

    0 $accept: program_start $end

    1 program_start: /* empty */
    2              | T_MAINPROG T_ID T_SEMICOLON declarations subprogram_declarations compound_statement
    3              | T_MAINPROG T_ID error declarations subprogram_declarations compound_statement

    4 declarations: type identifier_list T_SEMICOLON declarations
    5             | /* empty */

    6 identifier_list: T_ID
    7                | T_ID T_COMMA identifier_list

    8 type: standard_type
    9     | standard_type T_LEFT_BRACKET T_INTEGER T_RIGHT_BRACKET

   10 standard_type: T_INT
   11              | T_FLOAT

   12 subprogram_declarations: subprogram_declaration subprogram_declarations
   13                        | /* empty */

   14 subprogram_declaration: subprogram_head declarations compound_statement

   15 subprogram_head: T_FUNCTION T_ID arguments T_COLON standard_type T_SEMICOLON
   16                | T_PROCEDURE T_ID arguments T_SEMICOLON

   17 arguments: T_LEFT_PARENTHESIS parameter_list T_RIGHT_PARENTHESIS
   18          | T_LEFT_PARENTHESIS T_RIGHT_PARENTHESIS

   19 parameter_list: type T_COLON identifier_list
   20               | type T_COLON identifier_list T_SEMICOLON parameter_list

   21 compound_statement: T_BEGIN statement_list T_END

   22 statement_list: statement
   23               | statement T_SEMICOLON statement_list

   24 statement: variable T_ASSIGN expression
   25          | print_statement
   26          | procedure_statement
   27          | compound_statement
   28          | if_statement
   29          | while_statement
   30          | for_statement
   31          | T_RETURN expression
   32          | T_NOP

   33 if_statement: T_IF expression T_COLON statement
   34             | T_IF expression T_COLON statement T_ELSE T_COLON statement
   35             | T_IF expression T_COLON statement else_if_statement

   36 else_if_statement: T_ELIF expression T_COLON statement
   37                  | T_ELIF expression T_COLON statement T_ELSE T_COLON statement
   38                  | T_ELIF expression T_COLON statement else_if_statement

   39 while_statement: T_WHILE expression T_COLON statement
   40                | T_WHILE expression T_COLON statement T_ELSE T_COLON statement

   41 for_statement: T_FOR for_condition T_COLON statement
   42              | T_FOR for_condition T_COLON statement T_ELSE T_COLON statement

   43 for_condition: expression T_IN expression

   44 print_statement: T_PRINT
   45                | T_PRINT T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS

   46 variable: T_ID
   47         | T_ID T_LEFT_BRACKET expression T_RIGHT_BRACKET

   48 procedure_statement: T_ID T_LEFT_PARENTHESIS actual_parameter_expression T_RIGHT_PARENTHESIS

   49 actual_parameter_expression: expression_list
   50                            | /* empty */

   51 expression_list: expression
   52                | expression T_COMMA expression_list

   53 expression: simple_expression
   54           | simple_expression T_LARGER simple_expression
   55           | simple_expression T_LARGER_EQUAL simple_expression
   56           | simple_expression T_SMALLER simple_expression
   57           | simple_expression T_SMALLER_EQUAL simple_expression
   58           | simple_expression T_EQUAL simple_expression
   59           | simple_expression T_NOT_EQUAL simple_expression

   60 simple_expression: term
   61                  | term T_PLUS simple_expression
   62                  | term T_MINUS simple_expression

   63 term: factor
   64     | factor T_MULTIPLE term
   65     | factor T_DIVIDE term

   66 factor: T_INTEGER
   67       | T_FLOATING
   68       | variable
   69       | procedure_statement
   70       | T_NOT factor
   71       | T_PLUS factor
   72       | T_MINUS factor


Terminals, with rules where they appear

$end (0) 0
error (256) 3
T_INTEGER (258) 9 66
T_ID (259) 2 3 6 7 15 16 46 47 48
T_FLOATING (260) 67
T_PLUS (261) 61 71
T_MINUS (262) 62 72
T_MULTIPLE (263) 64
T_DIVIDE (264) 65
T_SMALLER (265) 56
T_EQUAL (266) 58
T_NOT_EQUAL (267) 59
T_ASSIGN (268) 24
T_SMALLER_EQUAL (269) 57
T_LARGER_EQUAL (270) 55
T_LARGER (271) 54
T_INT (272) 10
T_FLOAT (273) 11
T_NONE (274)
T_LATTER (275)
T_NEWLINE (276)
T_QUIT (277)
T_MAINPROG (278) 2 3
T_FUNCTION (279) 15
T_PROCEDURE (280) 16
T_BEGIN (281) 21
T_END (282) 21
T_IF (283) 33 34 35
T_THEN (284)
T_ELSE (285) 34 37 40 42
T_NOP (286) 32
T_WHILE (287) 39 40
T_RETURN (288) 31
T_PRINT (289) 44 45
T_IN (290) 43
T_OPERATOR (291)
T_SEMICOLON (292) 2 4 15 16 20 23
T_PERIOD (293)
T_COMMA (294) 7 52
T_LEFT_PARENTHESIS (295) 17 18 45 48
T_RIGHT_PARENTHESIS (296) 17 18 45 48
T_FOR (297) 41 42
T_LEFT_BRACKET (298) 9 47
T_RIGHT_BRACKET (299) 9 47
T_COLON (300) 15 19 20 33 34 35 36 37 38 39 40 41 42
T_COMMENT (301)
T_ELIF (302) 36 37 38
T_NOT (303) 70


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program_start (50)
    on left: 1 2 3, on right: 0
declarations (51)
    on left: 4 5, on right: 2 3 4 14
identifier_list (52)
    on left: 6 7, on right: 4 7 19 20
type (53)
    on left: 8 9, on right: 4 19 20
standard_type (54)
    on left: 10 11, on right: 8 9 15
subprogram_declarations (55)
    on left: 12 13, on right: 2 3 12
subprogram_declaration (56)
    on left: 14, on right: 12
subprogram_head (57)
    on left: 15 16, on right: 14
arguments (58)
    on left: 17 18, on right: 15 16
parameter_list (59)
    on left: 19 20, on right: 17 20
compound_statement (60)
    on left: 21, on right: 2 3 14 27
statement_list (61)
    on left: 22 23, on right: 21 23
statement (62)
    on left: 24 25 26 27 28 29 30 31 32, on right: 22 23 33 34 35 36
    37 38 39 40 41 42
if_statement (63)
    on left: 33 34 35, on right: 28
else_if_statement (64)
    on left: 36 37 38, on right: 35 38
while_statement (65)
    on left: 39 40, on right: 29
for_statement (66)
    on left: 41 42, on right: 30
for_condition (67)
    on left: 43, on right: 41 42
print_statement (68)
    on left: 44 45, on right: 25
variable (69)
    on left: 46 47, on right: 24 68
procedure_statement (70)
    on left: 48, on right: 26 69
actual_parameter_expression (71)
    on left: 49 50, on right: 48
expression_list (72)
    on left: 51 52, on right: 49 52
expression (73)
    on left: 53 54 55 56 57 58 59, on right: 24 31 33 34 35 36 37 38
    39 40 43 45 47 51 52
simple_expression (74)
    on left: 60 61 62, on right: 53 54 55 56 57 58 59 61 62
term (75)
    on left: 63 64 65, on right: 60 61 62 64 65
factor (76)
    on left: 66 67 68 69 70 71 72, on right: 63 64 65 70 71 72


state 0

    0 $accept: . program_start $end
    1 program_start: .  [$end]
    2              | . T_MAINPROG T_ID T_SEMICOLON declarations subprogram_declarations compound_statement
    3              | . T_MAINPROG T_ID error declarations subprogram_declarations compound_statement

    T_MAINPROG  shift, and go to state 1

    $default  reduce using rule 1 (program_start)

    program_start  go to state 2


state 1

    2 program_start: T_MAINPROG . T_ID T_SEMICOLON declarations subprogram_declarations compound_statement
    3              | T_MAINPROG . T_ID error declarations subprogram_declarations compound_statement

    T_ID  shift, and go to state 3


state 2

    0 $accept: program_start . $end

    $end  shift, and go to state 4


state 3

    2 program_start: T_MAINPROG T_ID . T_SEMICOLON declarations subprogram_declarations compound_statement
    3              | T_MAINPROG T_ID . error declarations subprogram_declarations compound_statement

    error        shift, and go to state 5
    T_SEMICOLON  shift, and go to state 6


state 4

    0 $accept: program_start $end .

    $default  accept


state 5

    3 program_start: T_MAINPROG T_ID error . declarations subprogram_declarations compound_statement
    4 declarations: . type identifier_list T_SEMICOLON declarations
    5             | .  [T_FUNCTION, T_PROCEDURE, T_BEGIN]
    8 type: . standard_type
    9     | . standard_type T_LEFT_BRACKET T_INTEGER T_RIGHT_BRACKET
   10 standard_type: . T_INT
   11              | . T_FLOAT

    T_INT    shift, and go to state 7
    T_FLOAT  shift, and go to state 8

    $default  reduce using rule 5 (declarations)

    declarations   go to state 9
    type           go to state 10
    standard_type  go to state 11


state 6

    2 program_start: T_MAINPROG T_ID T_SEMICOLON . declarations subprogram_declarations compound_statement
    4 declarations: . type identifier_list T_SEMICOLON declarations
    5             | .  [T_FUNCTION, T_PROCEDURE, T_BEGIN]
    8 type: . standard_type
    9     | . standard_type T_LEFT_BRACKET T_INTEGER T_RIGHT_BRACKET
   10 standard_type: . T_INT
   11              | . T_FLOAT

    T_INT    shift, and go to state 7
    T_FLOAT  shift, and go to state 8

    $default  reduce using rule 5 (declarations)

    declarations   go to state 12
    type           go to state 10
    standard_type  go to state 11


state 7

   10 standard_type: T_INT .

    $default  reduce using rule 10 (standard_type)


state 8

   11 standard_type: T_FLOAT .

    $default  reduce using rule 11 (standard_type)


state 9

    3 program_start: T_MAINPROG T_ID error declarations . subprogram_declarations compound_statement
   12 subprogram_declarations: . subprogram_declaration subprogram_declarations
   13                        | .  [T_BEGIN]
   14 subprogram_declaration: . subprogram_head declarations compound_statement
   15 subprogram_head: . T_FUNCTION T_ID arguments T_COLON standard_type T_SEMICOLON
   16                | . T_PROCEDURE T_ID arguments T_SEMICOLON

    T_FUNCTION   shift, and go to state 13
    T_PROCEDURE  shift, and go to state 14

    $default  reduce using rule 13 (subprogram_declarations)

    subprogram_declarations  go to state 15
    subprogram_declaration   go to state 16
    subprogram_head          go to state 17


state 10

    4 declarations: type . identifier_list T_SEMICOLON declarations
    6 identifier_list: . T_ID
    7                | . T_ID T_COMMA identifier_list

    T_ID  shift, and go to state 18

    identifier_list  go to state 19


state 11

    8 type: standard_type .  [T_ID, T_COLON]
    9     | standard_type . T_LEFT_BRACKET T_INTEGER T_RIGHT_BRACKET

    T_LEFT_BRACKET  shift, and go to state 20

    $default  reduce using rule 8 (type)


state 12

    2 program_start: T_MAINPROG T_ID T_SEMICOLON declarations . subprogram_declarations compound_statement
   12 subprogram_declarations: . subprogram_declaration subprogram_declarations
   13                        | .  [T_BEGIN]
   14 subprogram_declaration: . subprogram_head declarations compound_statement
   15 subprogram_head: . T_FUNCTION T_ID arguments T_COLON standard_type T_SEMICOLON
   16                | . T_PROCEDURE T_ID arguments T_SEMICOLON

    T_FUNCTION   shift, and go to state 13
    T_PROCEDURE  shift, and go to state 14

    $default  reduce using rule 13 (subprogram_declarations)

    subprogram_declarations  go to state 21
    subprogram_declaration   go to state 16
    subprogram_head          go to state 17


state 13

   15 subprogram_head: T_FUNCTION . T_ID arguments T_COLON standard_type T_SEMICOLON

    T_ID  shift, and go to state 22


state 14

   16 subprogram_head: T_PROCEDURE . T_ID arguments T_SEMICOLON

    T_ID  shift, and go to state 23


state 15

    3 program_start: T_MAINPROG T_ID error declarations subprogram_declarations . compound_statement
   21 compound_statement: . T_BEGIN statement_list T_END

    T_BEGIN  shift, and go to state 24

    compound_statement  go to state 25


state 16

   12 subprogram_declarations: . subprogram_declaration subprogram_declarations
   12                        | subprogram_declaration . subprogram_declarations
   13                        | .  [T_BEGIN]
   14 subprogram_declaration: . subprogram_head declarations compound_statement
   15 subprogram_head: . T_FUNCTION T_ID arguments T_COLON standard_type T_SEMICOLON
   16                | . T_PROCEDURE T_ID arguments T_SEMICOLON

    T_FUNCTION   shift, and go to state 13
    T_PROCEDURE  shift, and go to state 14

    $default  reduce using rule 13 (subprogram_declarations)

    subprogram_declarations  go to state 26
    subprogram_declaration   go to state 16
    subprogram_head          go to state 17


state 17

    4 declarations: . type identifier_list T_SEMICOLON declarations
    5             | .  [T_BEGIN]
    8 type: . standard_type
    9     | . standard_type T_LEFT_BRACKET T_INTEGER T_RIGHT_BRACKET
   10 standard_type: . T_INT
   11              | . T_FLOAT
   14 subprogram_declaration: subprogram_head . declarations compound_statement

    T_INT    shift, and go to state 7
    T_FLOAT  shift, and go to state 8

    $default  reduce using rule 5 (declarations)

    declarations   go to state 27
    type           go to state 10
    standard_type  go to state 11


state 18

    6 identifier_list: T_ID .  [T_SEMICOLON, T_RIGHT_PARENTHESIS]
    7                | T_ID . T_COMMA identifier_list

    T_COMMA  shift, and go to state 28

    $default  reduce using rule 6 (identifier_list)


state 19

    4 declarations: type identifier_list . T_SEMICOLON declarations

    T_SEMICOLON  shift, and go to state 29


state 20

    9 type: standard_type T_LEFT_BRACKET . T_INTEGER T_RIGHT_BRACKET

    T_INTEGER  shift, and go to state 30


state 21

    2 program_start: T_MAINPROG T_ID T_SEMICOLON declarations subprogram_declarations . compound_statement
   21 compound_statement: . T_BEGIN statement_list T_END

    T_BEGIN  shift, and go to state 24

    compound_statement  go to state 31


state 22

   15 subprogram_head: T_FUNCTION T_ID . arguments T_COLON standard_type T_SEMICOLON
   17 arguments: . T_LEFT_PARENTHESIS parameter_list T_RIGHT_PARENTHESIS
   18          | . T_LEFT_PARENTHESIS T_RIGHT_PARENTHESIS

    T_LEFT_PARENTHESIS  shift, and go to state 32

    arguments  go to state 33


state 23

   16 subprogram_head: T_PROCEDURE T_ID . arguments T_SEMICOLON
   17 arguments: . T_LEFT_PARENTHESIS parameter_list T_RIGHT_PARENTHESIS
   18          | . T_LEFT_PARENTHESIS T_RIGHT_PARENTHESIS

    T_LEFT_PARENTHESIS  shift, and go to state 32

    arguments  go to state 34


state 24

   21 compound_statement: . T_BEGIN statement_list T_END
   21                   | T_BEGIN . statement_list T_END
   22 statement_list: . statement
   23               | . statement T_SEMICOLON statement_list
   24 statement: . variable T_ASSIGN expression
   25          | . print_statement
   26          | . procedure_statement
   27          | . compound_statement
   28          | . if_statement
   29          | . while_statement
   30          | . for_statement
   31          | . T_RETURN expression
   32          | . T_NOP
   33 if_statement: . T_IF expression T_COLON statement
   34             | . T_IF expression T_COLON statement T_ELSE T_COLON statement
   35             | . T_IF expression T_COLON statement else_if_statement
   39 while_statement: . T_WHILE expression T_COLON statement
   40                | . T_WHILE expression T_COLON statement T_ELSE T_COLON statement
   41 for_statement: . T_FOR for_condition T_COLON statement
   42              | . T_FOR for_condition T_COLON statement T_ELSE T_COLON statement
   44 print_statement: . T_PRINT
   45                | . T_PRINT T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   46 variable: . T_ID
   47         | . T_ID T_LEFT_BRACKET expression T_RIGHT_BRACKET
   48 procedure_statement: . T_ID T_LEFT_PARENTHESIS actual_parameter_expression T_RIGHT_PARENTHESIS

    T_ID      shift, and go to state 35
    T_BEGIN   shift, and go to state 24
    T_IF      shift, and go to state 36
    T_NOP     shift, and go to state 37
    T_WHILE   shift, and go to state 38
    T_RETURN  shift, and go to state 39
    T_PRINT   shift, and go to state 40
    T_FOR     shift, and go to state 41

    compound_statement   go to state 42
    statement_list       go to state 43
    statement            go to state 44
    if_statement         go to state 45
    while_statement      go to state 46
    for_statement        go to state 47
    print_statement      go to state 48
    variable             go to state 49
    procedure_statement  go to state 50


state 25

    3 program_start: T_MAINPROG T_ID error declarations subprogram_declarations compound_statement .

    $default  reduce using rule 3 (program_start)


state 26

   12 subprogram_declarations: subprogram_declaration subprogram_declarations .

    $default  reduce using rule 12 (subprogram_declarations)


state 27

   14 subprogram_declaration: subprogram_head declarations . compound_statement
   21 compound_statement: . T_BEGIN statement_list T_END

    T_BEGIN  shift, and go to state 24

    compound_statement  go to state 51


state 28

    6 identifier_list: . T_ID
    7                | . T_ID T_COMMA identifier_list
    7                | T_ID T_COMMA . identifier_list

    T_ID  shift, and go to state 18

    identifier_list  go to state 52


state 29

    4 declarations: . type identifier_list T_SEMICOLON declarations
    4             | type identifier_list T_SEMICOLON . declarations
    5             | .  [T_FUNCTION, T_PROCEDURE, T_BEGIN]
    8 type: . standard_type
    9     | . standard_type T_LEFT_BRACKET T_INTEGER T_RIGHT_BRACKET
   10 standard_type: . T_INT
   11              | . T_FLOAT

    T_INT    shift, and go to state 7
    T_FLOAT  shift, and go to state 8

    $default  reduce using rule 5 (declarations)

    declarations   go to state 53
    type           go to state 10
    standard_type  go to state 11


state 30

    9 type: standard_type T_LEFT_BRACKET T_INTEGER . T_RIGHT_BRACKET

    T_RIGHT_BRACKET  shift, and go to state 54


state 31

    2 program_start: T_MAINPROG T_ID T_SEMICOLON declarations subprogram_declarations compound_statement .

    $default  reduce using rule 2 (program_start)


state 32

    8 type: . standard_type
    9     | . standard_type T_LEFT_BRACKET T_INTEGER T_RIGHT_BRACKET
   10 standard_type: . T_INT
   11              | . T_FLOAT
   17 arguments: T_LEFT_PARENTHESIS . parameter_list T_RIGHT_PARENTHESIS
   18          | T_LEFT_PARENTHESIS . T_RIGHT_PARENTHESIS
   19 parameter_list: . type T_COLON identifier_list
   20               | . type T_COLON identifier_list T_SEMICOLON parameter_list

    T_INT                shift, and go to state 7
    T_FLOAT              shift, and go to state 8
    T_RIGHT_PARENTHESIS  shift, and go to state 55

    type            go to state 56
    standard_type   go to state 11
    parameter_list  go to state 57


state 33

   15 subprogram_head: T_FUNCTION T_ID arguments . T_COLON standard_type T_SEMICOLON

    T_COLON  shift, and go to state 58


state 34

   16 subprogram_head: T_PROCEDURE T_ID arguments . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 59


state 35

   46 variable: T_ID .  [T_PLUS, T_MINUS, T_MULTIPLE, T_DIVIDE, T_SMALLER, T_EQUAL, T_NOT_EQUAL, T_ASSIGN, T_SMALLER_EQUAL, T_LARGER_EQUAL, T_LARGER, T_END, T_ELSE, T_IN, T_SEMICOLON, T_COMMA, T_RIGHT_PARENTHESIS, T_RIGHT_BRACKET, T_COLON, T_ELIF]
   47         | T_ID . T_LEFT_BRACKET expression T_RIGHT_BRACKET
   48 procedure_statement: T_ID . T_LEFT_PARENTHESIS actual_parameter_expression T_RIGHT_PARENTHESIS

    T_LEFT_PARENTHESIS  shift, and go to state 60
    T_LEFT_BRACKET      shift, and go to state 61

    $default  reduce using rule 46 (variable)


state 36

   33 if_statement: T_IF . expression T_COLON statement
   34             | T_IF . expression T_COLON statement T_ELSE T_COLON statement
   35             | T_IF . expression T_COLON statement else_if_statement
   46 variable: . T_ID
   47         | . T_ID T_LEFT_BRACKET expression T_RIGHT_BRACKET
   48 procedure_statement: . T_ID T_LEFT_PARENTHESIS actual_parameter_expression T_RIGHT_PARENTHESIS
   53 expression: . simple_expression
   54           | . simple_expression T_LARGER simple_expression
   55           | . simple_expression T_LARGER_EQUAL simple_expression
   56           | . simple_expression T_SMALLER simple_expression
   57           | . simple_expression T_SMALLER_EQUAL simple_expression
   58           | . simple_expression T_EQUAL simple_expression
   59           | . simple_expression T_NOT_EQUAL simple_expression
   60 simple_expression: . term
   61                  | . term T_PLUS simple_expression
   62                  | . term T_MINUS simple_expression
   63 term: . factor
   64     | . factor T_MULTIPLE term
   65     | . factor T_DIVIDE term
   66 factor: . T_INTEGER
   67       | . T_FLOATING
   68       | . variable
   69       | . procedure_statement
   70       | . T_NOT factor
   71       | . T_PLUS factor
   72       | . T_MINUS factor

    T_INTEGER   shift, and go to state 62
    T_ID        shift, and go to state 35
    T_FLOATING  shift, and go to state 63
    T_PLUS      shift, and go to state 64
    T_MINUS     shift, and go to state 65
    T_NOT       shift, and go to state 66

    variable             go to state 67
    procedure_statement  go to state 68
    expression           go to state 69
    simple_expression    go to state 70
    term                 go to state 71
    factor               go to state 72


state 37

   32 statement: T_NOP .

    $default  reduce using rule 32 (statement)


state 38

   39 while_statement: T_WHILE . expression T_COLON statement
   40                | T_WHILE . expression T_COLON statement T_ELSE T_COLON statement
   46 variable: . T_ID
   47         | . T_ID T_LEFT_BRACKET expression T_RIGHT_BRACKET
   48 procedure_statement: . T_ID T_LEFT_PARENTHESIS actual_parameter_expression T_RIGHT_PARENTHESIS
   53 expression: . simple_expression
   54           | . simple_expression T_LARGER simple_expression
   55           | . simple_expression T_LARGER_EQUAL simple_expression
   56           | . simple_expression T_SMALLER simple_expression
   57           | . simple_expression T_SMALLER_EQUAL simple_expression
   58           | . simple_expression T_EQUAL simple_expression
   59           | . simple_expression T_NOT_EQUAL simple_expression
   60 simple_expression: . term
   61                  | . term T_PLUS simple_expression
   62                  | . term T_MINUS simple_expression
   63 term: . factor
   64     | . factor T_MULTIPLE term
   65     | . factor T_DIVIDE term
   66 factor: . T_INTEGER
   67       | . T_FLOATING
   68       | . variable
   69       | . procedure_statement
   70       | . T_NOT factor
   71       | . T_PLUS factor
   72       | . T_MINUS factor

    T_INTEGER   shift, and go to state 62
    T_ID        shift, and go to state 35
    T_FLOATING  shift, and go to state 63
    T_PLUS      shift, and go to state 64
    T_MINUS     shift, and go to state 65
    T_NOT       shift, and go to state 66

    variable             go to state 67
    procedure_statement  go to state 68
    expression           go to state 73
    simple_expression    go to state 70
    term                 go to state 71
    factor               go to state 72


state 39

   31 statement: T_RETURN . expression
   46 variable: . T_ID
   47         | . T_ID T_LEFT_BRACKET expression T_RIGHT_BRACKET
   48 procedure_statement: . T_ID T_LEFT_PARENTHESIS actual_parameter_expression T_RIGHT_PARENTHESIS
   53 expression: . simple_expression
   54           | . simple_expression T_LARGER simple_expression
   55           | . simple_expression T_LARGER_EQUAL simple_expression
   56           | . simple_expression T_SMALLER simple_expression
   57           | . simple_expression T_SMALLER_EQUAL simple_expression
   58           | . simple_expression T_EQUAL simple_expression
   59           | . simple_expression T_NOT_EQUAL simple_expression
   60 simple_expression: . term
   61                  | . term T_PLUS simple_expression
   62                  | . term T_MINUS simple_expression
   63 term: . factor
   64     | . factor T_MULTIPLE term
   65     | . factor T_DIVIDE term
   66 factor: . T_INTEGER
   67       | . T_FLOATING
   68       | . variable
   69       | . procedure_statement
   70       | . T_NOT factor
   71       | . T_PLUS factor
   72       | . T_MINUS factor

    T_INTEGER   shift, and go to state 62
    T_ID        shift, and go to state 35
    T_FLOATING  shift, and go to state 63
    T_PLUS      shift, and go to state 64
    T_MINUS     shift, and go to state 65
    T_NOT       shift, and go to state 66

    variable             go to state 67
    procedure_statement  go to state 68
    expression           go to state 74
    simple_expression    go to state 70
    term                 go to state 71
    factor               go to state 72


state 40

   44 print_statement: T_PRINT .  [T_END, T_ELSE, T_SEMICOLON, T_ELIF]
   45                | T_PRINT . T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS

    T_LEFT_PARENTHESIS  shift, and go to state 75

    $default  reduce using rule 44 (print_statement)


state 41
